# Render

./: .gitattributes  .gitignore  CMakeLists.txt  Render.VC.VC.opendb  Render.psess  Render.sln  Render170202.vspx  points.txt
Render/: BtDebugDrawer.cpp  BtDebugDrawer.hpp  Render.aps  Render.rc  Render.vcxproj  Render.vcxproj.filters  camera.cpp  camera.h  cube.cpp  cube.hpp  level.cpp  level.hpp  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  object.cpp  object.hpp  objects.hpp  physics_manager.cpp  physics_manager.hpp  physics_object.cpp  physics_object.hpp  poll_events.cpp  poll_events.hpp  render.cpp  render.hpp  resource.h  resource_manager.cpp  resource_manager.hpp  rock.cpp  rock.hpp  screen_buffer_object.cpp  screen_buffer_object.hpp  shader.cpp  shader.h  texture_operations.cpp  texture_operations.hpp  trash_benzovoz_gaz_lod.cpp  (+5 more)
Render/Debug/: vc140.idb
Render/Debug/Render.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Render.lastbuildstate
Render/core/: core.cpp  core.hpp
Render/core/camera/: camera.cpp  camera.hpp
Render/core/core_errors/: core_error.hpp
Render/core/depth_buffer/: depth_buffer.cpp  depth_buffer.hpp
Render/core/keyboard_manager/: keyboard_manager.cpp  keyboard_manager.hpp
Render/core/mouse_manager/: mouse_manager.cpp  mouse_manager.hpp
Render/core/physics_manager/: physics_manager.cpp  physics_manager.hpp
Render/data/textures/: grnd_grass_mp.dds  (+5 more)
Render/error/: error.hpp
Render/operations/: file_operations.cpp  file_operations.hpp  light.cpp  light.hpp  texture_operations.hpp  textures_operations.cpp
Render/resources/: bt_debug_drawer.frag  point_shadows.frag  point_shadows_depth.frag  point_shadows_depth.geom  screen_buffer_fragment_shader.frag  skybox.vert  ston_asfalt_hr_iov_normal.dds  wall_house_red_02.dds  wall_orange_01_normal.dds  wall_yellow_01.dds  wood_plank7.dds  wood_razlom_1.dds
x64/Debug/: grnd_concrete_1.dds  grnd_grass_mp_normal.dds  log.txt  point_shadows.frag  point_shadows.vert  ston_asfalt_hr_iov.dds
x64/Release/: Render.iobj  Render.ipdb  bt_debug_drawer.vert  point_shadows.frag  point_shadows.vert  skybox.frag
(+276 files in other folders)
